# dump_syms

./: .gitattributes  .gitignore  .taskcluster.yml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  release.yml
infra/: release.py  requirements.txt
src/: action.rs  cache.rs  collector.rs  common.rs  dumper.rs  elf.rs  inline_origins.rs  lib.rs  line.rs  lines.rs  linux.rs  mac.rs  main.rs  mapping.rs  object_info.rs  pe.rs  platform.rs  source.rs  symbol.rs  utils.rs
src/linux/: elf.rs  lines.rs  mod.rs  source.rs  symbol.rs
src/mac/: macho.rs  mod.rs
src/windows/: line.rs  lines.rs  mod.rs  pdb.rs  source.rs  symbol.rs  types.rs  utils.rs
test_data/: Makefile  basic-opt32.old.sym  basic-opt64.old.sym  basic.cpp  basic32-min.old.sym  basic32.old.sym  basic64.old.sym  mapping.json  moz_mapping.json
test_data/linux/: Makefile  basic.cpp  basic.dbg  basic.dbg.sym  basic.dwz  basic.dwz.inlines.sym  basic.full  basic.full.inlines.sym  basic.full.sym  basic.full_no_multiple.sym  basic.minidebuginfo  basic.minidebuginfo.sym  basic.stripped
test_data/windows/: basic-opt32.old.sym  basic-opt32.sym  basic-opt64.old.sym  basic-opt64.sym  basic32-dwarf.sym  basic32-min.old.sym  basic32-min.sym  basic32.old.sym  basic32.pd_  basic32.sym  basic64-dwarf.sym  basic64.old.sym  basic64.sym  dump_syms_regtest64.old.sym  dump_syms_regtest64.sym  mozwer.sym  ntdll.old.sym  ntdll.sym  oleaut32.old.sym  oleaut32.sym
