[package]
name = "dump_syms"
version = "1.0.1"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
repository = "https://github.com/mozilla/dump_syms"
homepage = "https://github.com/mozilla/dump_syms"
description = "Dump debug symbols into Breakpad ones"
edition = "2018"
license = "MIT/Apache-2.0"

[[bin]]
name = "dump_syms"
required-features = ["cli"]

[features]
default = ["cli", "http"]
# Feature needed when building the dump_syms executable
cli = ["clap", "simplelog"]
# Feature for allowing retrieval of symbols via HTTP
http = ["reqwest", "futures", "tokio"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
cab = "0.4"
clap = { version = "2.33", optional = true }
crossbeam = "0.8.1"
dirs = "4.0"
futures = { version = "0.3", optional = true }
goblin = "0.5.1" # Keep in sync with symbolic-debuginfo
hashbrown = { version = "0.12", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.13"
pdb-addr2line = "0.7"
regex = "1.4"
reqwest = { version = "0.11", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
simplelog = { version = "0.12", optional = true, features = ["local-offset"] }
symbolic = { version = "9", features = ["demangle", "cfi"] }
tokio = { version = "1.8", optional = true }
url = "2.2"
uuid = "1"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
fxhash = "0.2"
tempfile = "3"
