[package]
name = "dump_syms"
version = "2.3.1"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
repository = "https://github.com/mozilla/dump_syms"
homepage = "https://github.com/mozilla/dump_syms"
description = "Dump debug symbols into Breakpad ones"
edition = "2018"
license = "MIT/Apache-2.0"

[[bin]]
name = "dump_syms"
required-features = ["cli"]

[features]
default = ["cli", "http"]
# Feature needed when building the dump_syms executable
cli = ["clap", "simplelog"]
# Feature for allowing retrieval of symbols via HTTP
http = ["reqwest", "futures", "tokio"]

[dependencies]
anyhow = "1.0"
bitflags = "2"
cab = "0.5"
clap = { version = "4", optional = true, features = ["cargo"] }
crossbeam = "0.8"
dirs = "5"
futures = { version = "0.3", optional = true }
goblin = "0.7" # Keep in sync with symbolic-debuginfo
hashbrown = { version = "0.14", features = ["serde"] }
log = "0.4"
lzma-rs = "0.3.0"
num_cpus = "1.13"
once_cell = "1.15"
regex = "1.6"
reqwest = { version = "0.11", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
simplelog = { version = "0.12", optional = true, features = ["local-offset"] }
symbolic = { version = "12", features = ["demangle", "cfi"] }
tokio = { version = "1.23", optional = true, features = ["rt-multi-thread"] }
url = "2.2"
uuid = "1"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
fxhash = "0.2"
tempfile = "3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
